force-app/main/default/objects/CA_Customer_Assessment__c/CA_Customer_Assessment__c.object-meta.xml
<CustomObject>
    <label>Account Profiles</label>
    <nameField>
        <displayFormat>CA-{0000000000}</displayFormat>
        <label>Customer Assessment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CA Customer Assessment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>