force-app/main/default/objects/CA_Customer_Assessment__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Profilescopy</relationshipLabel>
    <relationshipName>Customer_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>