force-app/main/default/objects/CA_Customer_Assessment__c/fields/Account_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Account_Vertical__c</fullName>
    <formula>TEXT(TP_Account__r.Account_Vertical__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Vertical</label>
    <type>Text</type>
</CustomField>