force-app/main/default/objects/CA_Customer_Assessment__c/fields/Acct_Access_ULink_Description__c.field-meta.xml
<CustomField>
    <fullName>Acct_Access_ULink_Description__c</fullName>
    <label>Acct Access - ULink Description</label>
    <type>TextArea</type>
</CustomField>