force-app/main/default/objects/CA_Customer_Assessment__c/fields/Acct_Access_xpedx_com__c.field-meta.xml
<CustomField>
    <fullName>Acct_Access_xpedx_com__c</fullName>
    <label>Acct Access - xpedx.com</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>