force-app/main/default/objects/CA_Customer_Assessment__c/fields/Amalgamated_Description__c.field-meta.xml
<CustomField>
    <fullName>Amalgamated_Description__c</fullName>
    <label>Amalgamated Description</label>
    <type>TextArea</type>
</CustomField>