force-app/main/default/objects/CA_Customer_Assessment__c/fields/ASN_Description__c.field-meta.xml
<CustomField>
    <fullName>ASN_Description__c</fullName>
    <label>ASN Description</label>
    <type>TextArea</type>
</CustomField>