force-app/main/default/objects/CA_Customer_Assessment__c/fields/At_Risk_Issues__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At Risk Issues?</label>
    <type>Checkbox</type>
</CustomField>