force-app/main/default/objects/CA_Customer_Assessment__c/fields/At_Risk_Issues_Description__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Issues_Description__c</fullName>
    <label>At Risk Issues? Description</label>
    <type>TextArea</type>
</CustomField>