force-app/main/default/objects/CA_Customer_Assessment__c/fields/Based_upon_your_research_where_are_the__c.field-meta.xml
<CustomField>
    <fullName>Based_upon_your_research_where_are_the__c</fullName>
    <description>Based upon your research, where are the general areas that we could help them achieve their strategic goals?
       For Example - Procurement Efficiency, Improve Productivity, Inventory/Sapce efficiency, Product/brand enhancement and cost avoidance</description>
    <inlineHelpText>For Example - Procurement Efficiency, Improve Productivity, Inventory/Sapce efficiency, Product/brand enhancement and cost avoidance</inlineHelpText>
    <label>How Veritiv Will Help Achieve Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>