force-app/main/default/objects/CA_Customer_Assessment__c/fields/BlanketPOwithDollarLimitDescription__c.field-meta.xml
<CustomField>
    <fullName>BlanketPOwithDollarLimitDescription__c</fullName>
    <label>Blanket PO with Dollar Limit Description</label>
    <type>TextArea</type>
</CustomField>