force-app/main/default/objects/CA_Customer_Assessment__c/fields/BracketPricingDiscListLess__c.field-meta.xml
<CustomField>
    <fullName>BracketPricingDiscListLess__c</fullName>
    <inlineHelpText>Bracket Pricing (Discount List Less/Rule 2)</inlineHelpText>
    <label>Bracket Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Informational Only</fullName>
                <isActive>false</isActive>
                <label>Informational Only</label>
            </value>
            <value>
                <fullName>Review Required</fullName>
                <isActive>false</isActive>
                <label>Review Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>