force-app/main/default/objects/CA_Customer_Assessment__c/fields/BracketPricingDiscListLessDesc__c.field-meta.xml
<CustomField>
    <fullName>BracketPricingDiscListLessDesc__c</fullName>
    <inlineHelpText>Bracket Pricing (Discount List Less/Rule 2) Description</inlineHelpText>
    <label>Bracket Pricing (Disc List Less) Desc</label>
    <type>TextArea</type>
</CustomField>