force-app/main/default/objects/CA_Customer_Assessment__c/fields/Chain_Account__c.field-meta.xml
<CustomField>
    <fullName>Chain_Account__c</fullName>
    <formula>TP_Account__r.Chain_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chain Account</label>
    <type>Text</type>
</CustomField>