force-app/main/default/objects/CA_Customer_Assessment__c/fields/Charge_and_Hold_Description__c.field-meta.xml
<CustomField>
    <fullName>Charge_and_Hold_Description__c</fullName>
    <label>Charge and Hold Description</label>
    <type>TextArea</type>
</CustomField>