force-app/main/default/objects/CA_Customer_Assessment__c/fields/CIRT_Description__c.field-meta.xml
<CustomField>
    <fullName>CIRT_Description__c</fullName>
    <label>CIRT Description</label>
    <type>TextArea</type>
</CustomField>