force-app/main/default/objects/CA_Customer_Assessment__c/fields/CMS_or_Zilliant__c.field-meta.xml
<CustomField>
    <fullName>CMS_or_Zilliant__c</fullName>
    <label>CMS or Zilliant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CMS</fullName>
            </value>
            <value>
                <fullName>Zilliant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>