force-app/main/default/objects/CA_Customer_Assessment__c/fields/Company_Bio__c.field-meta.xml
<CustomField>
    <fullName>Company_Bio__c</fullName>
    <inlineHelpText>Include a summary of the company&apos;s core business-include number of employees, markets served and affiliated businesses or organizations. Are they publicly traded or privately held? Note: The company website(About&quot; section) contains this information.</inlineHelpText>
    <label>Company Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>