force-app/main/default/objects/CA_Customer_Assessment__c/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <description>Who are their Competitors? Does Veritiv do business with any of them?Their Vendors (Veritiv Competitors)</description>
    <inlineHelpText>Who are their Competitors? Does Veritiv do business with any of them?Their Vendors (Veritiv Competitors)</inlineHelpText>
    <label>Competitors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>