force-app/main/default/objects/CA_Customer_Assessment__c/fields/Consignment_Description__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Description__c</fullName>
    <label>Consignment Description</label>
    <type>TextArea</type>
</CustomField>