force-app/main/default/objects/CA_Customer_Assessment__c/fields/Consolidated_PODs_Description__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_PODs_Description__c</fullName>
    <label>Consolidated PODs Description</label>
    <type>TextArea</type>
</CustomField>