force-app/main/default/objects/CA_Customer_Assessment__c/fields/Conversion__c.field-meta.xml
<CustomField>
    <fullName>Conversion__c</fullName>
    <inlineHelpText>Divisions that will be involved in the conversion</inlineHelpText>
    <label>Conversion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Event 5</fullName>
            </value>
            <value>
                <fullName>Event 6</fullName>
            </value>
            <value>
                <fullName>Lakeland/Miami</fullName>
            </value>
            <value>
                <fullName>Memphis/Little Rock</fullName>
            </value>
            <value>
                <fullName>PC/NU Conversion</fullName>
            </value>
            <value>
                <fullName>SW Instance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>