force-app/main/default/objects/CA_Customer_Assessment__c/fields/Converting_Description__c.field-meta.xml
<CustomField>
    <fullName>Converting_Description__c</fullName>
    <label>Converting Description</label>
    <type>TextArea</type>
</CustomField>