force-app/main/default/objects/CA_Customer_Assessment__c/fields/ConvertingExternal__c.field-meta.xml
<CustomField>
    <fullName>ConvertingExternal__c</fullName>
    <label>Converting - External</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>