force-app/main/default/objects/CA_Customer_Assessment__c/fields/ConvertingExternalDescription__c.field-meta.xml
<CustomField>
    <fullName>ConvertingExternalDescription__c</fullName>
    <label>Converting - External Description</label>
    <type>TextArea</type>
</CustomField>