force-app/main/default/objects/CA_Customer_Assessment__c/fields/ConvertingInternalDescription__c.field-meta.xml
<CustomField>
    <fullName>ConvertingInternalDescription__c</fullName>
    <label>Converting - Internal Description</label>
    <type>TextArea</type>
</CustomField>