force-app/main/default/objects/CA_Customer_Assessment__c/fields/Corporate_Account__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Account?</label>
    <type>Checkbox</type>
</CustomField>