force-app/main/default/objects/CA_Customer_Assessment__c/fields/Corporate_Account_Description__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Account_Description__c</fullName>
    <label>Corporate Account? Description</label>
    <type>TextArea</type>
</CustomField>