force-app/main/default/objects/CA_Customer_Assessment__c/fields/CSC_Location__c.field-meta.xml
<CustomField>
    <fullName>CSC_Location__c</fullName>
    <label>CSC Location</label>
    <length>250</length>
    <type>Text</type>
</CustomField>