force-app/main/default/objects/CA_Customer_Assessment__c/fields/CSC_Support_Location_Description__c.field-meta.xml
<CustomField>
    <fullName>CSC_Support_Location_Description__c</fullName>
    <label>CSC Support Location Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>