force-app/main/default/objects/CA_Customer_Assessment__c/fields/Cust_Flag_Req_Line_Level_Description__c.field-meta.xml
<CustomField>
    <fullName>Cust_Flag_Req_Line_Level_Description__c</fullName>
    <label>Cust Flag - Line Level Description</label>
    <type>TextArea</type>
</CustomField>