force-app/main/default/objects/CA_Customer_Assessment__c/fields/Cust_Flag_Required_Line_Level__c.field-meta.xml
<CustomField>
    <fullName>Cust_Flag_Required_Line_Level__c</fullName>
    <label>Cust Flag - PO/Job# - Line Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>