force-app/main/default/objects/CA_Customer_Assessment__c/fields/Cust_Flags_Amalgamate__c.field-meta.xml
<CustomField>
    <fullName>Cust_Flags_Amalgamate__c</fullName>
    <label>Cust Flags - Amalgamate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>