force-app/main/default/objects/CA_Customer_Assessment__c/fields/Cust_Flags_Hands_Free_Description__c.field-meta.xml
<CustomField>
    <fullName>Cust_Flags_Hands_Free_Description__c</fullName>
    <label>Cust Flags - Hands Free Description</label>
    <type>TextArea</type>
</CustomField>