force-app/main/default/objects/CA_Customer_Assessment__c/fields/Cust_Flags_PO_Price_Match_Description__c.field-meta.xml
<CustomField>
    <fullName>Cust_Flags_PO_Price_Match_Description__c</fullName>
    <label>Cust Flags - PO Price Match Description</label>
    <type>TextArea</type>
</CustomField>