force-app/main/default/objects/CA_Customer_Assessment__c/fields/Cust_Preferred_Shipping_Meth_Description__c.field-meta.xml
<CustomField>
    <fullName>Cust_Preferred_Shipping_Meth_Description__c</fullName>
    <label>Cust Preferred Shipping Meth Description</label>
    <type>TextArea</type>
</CustomField>