force-app/main/default/objects/CA_Customer_Assessment__c/fields/Custom_Bill_of_Lading__c.field-meta.xml
<CustomField>
    <fullName>Custom_Bill_of_Lading__c</fullName>
    <label>Custom Bill of Lading</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>