force-app/main/default/objects/CA_Customer_Assessment__c/fields/Custom_Bill_of_Lading_Description__c.field-meta.xml
<CustomField>
    <fullName>Custom_Bill_of_Lading_Description__c</fullName>
    <label>Custom Bill of Lading Description</label>
    <type>TextArea</type>
</CustomField>