force-app/main/default/objects/CA_Customer_Assessment__c/fields/Custom_Catalog_Marketing_Description__c.field-meta.xml
<CustomField>
    <fullName>Custom_Catalog_Marketing_Description__c</fullName>
    <label>Custom Catalog/Marketing Description</label>
    <type>TextArea</type>
</CustomField>