force-app/main/default/objects/CA_Customer_Assessment__c/fields/Custom_Reports__c.field-meta.xml
<CustomField>
    <fullName>Custom_Reports__c</fullName>
    <label>Existing Custom Reports</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>