force-app/main/default/objects/CA_Customer_Assessment__c/fields/Custom_Reports_Description__c.field-meta.xml
<CustomField>
    <fullName>Custom_Reports_Description__c</fullName>
    <label>Custom Reports Description</label>
    <type>TextArea</type>
</CustomField>