force-app/main/default/objects/CA_Customer_Assessment__c/fields/Customer_Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Assessment_Status__c</fullName>
    <label>Customer Assessment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <label>Sales Complete</label>
            </value>
            <value>
                <fullName>CX Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>