force-app/main/default/objects/CA_Customer_Assessment__c/fields/Customer_Dedicated_Items_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Dedicated_Items_Description__c</fullName>
    <label>Customer Dedicated Items Description</label>
    <type>TextArea</type>
</CustomField>