force-app/main/default/objects/CA_Customer_Assessment__c/fields/Customer_eBusines_Reporting_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_eBusines_Reporting_Description__c</fullName>
    <label>Customer eBusines Reporting Description</label>
    <type>TextArea</type>
</CustomField>