force-app/main/default/objects/CA_Customer_Assessment__c/fields/Customer_Portal__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal__c</fullName>
    <inlineHelpText>For Billing or Orders</inlineHelpText>
    <label>Customer Portal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>