force-app/main/default/objects/CA_Customer_Assessment__c/fields/Customer_Portal_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Description__c</fullName>
    <label>Customer Portal Description</label>
    <type>TextArea</type>
</CustomField>