force-app/main/default/objects/CA_Customer_Assessment__c/fields/Customer_Preferred_Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Customer_Preferred_Shipping_Method__c</fullName>
    <label>Customer Preferred Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>Comm Carrier</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>