force-app/main/default/objects/CA_Customer_Assessment__c/fields/Customer_Strategic_Business_Goals__c.field-meta.xml
<CustomField>
    <fullName>Customer_Strategic_Business_Goals__c</fullName>
    <description>What are their short term current year and longer term plans? Look at the Annual Reports if possible.</description>
    <inlineHelpText>What are their short term current year and longer term plans? Look at the Annual Reports if possible.</inlineHelpText>
    <label>Customer Strategic Business Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>